# sudoku

./: Cargo.toml  README.md
src/: board.rs  lib.rs  main.rs
