[package]
name = "sudoku"
version = "0.1.0"
authors = ["Akshay Ghiya <akshayghiya123@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
cfg-if = "0.1.2"
wasm-bindgen = "0.2.62"
console_error_panic_hook = { version = "0.1.6", optional=true }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

